fixed grid spacing

--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -60,6 +60,10 @@
 			&--text {
 				text-align: left;
 
+				&:nth-of-type(4) {
+					margin-bottom: 2rem;
+				}
+
 				@include respond(tab-port) {
 					font-size: 1.5rem;
 				}
@@ -88,17 +92,23 @@
 
 			&--techologies {
 				display: grid;
-				grid-template-columns: repeat(2, minmax(14.2rem, 1fr));
+				grid-template-columns: repeat(2, minmax(min-content, max-content));
 				column-gap: 8rem;
 				row-gap: 0.5rem;
 				text-align: left;
 				justify-items: start;
 				align-items: center;
-				margin-bottom: 1rem;
+				margin-bottom: 3rem;
+
+				@include respond(phone-xs) {
+					column-gap: 4rem;
+				}
 			}
 
 			&--techology-container {
 				font-size: 1.4rem;
+				white-space: nowrap;
+
 				& > .fas {
 					margin-right: 1.5rem;
 				}
